--- a/frontend/.prettierrc.json
+++ b/frontend/.prettierrc.json
@@ -1,7 +1,9 @@
 {
   "semi": true,
   "tabWidth": 2,
-  "printWidth": 100,
+  "printWidth": 80,
   "singleQuote": true,
-  "trailingComma": "none"
+  "jsxBracketSameLine": false,
+  "trailingComma": "none",
+  "plugins": ["prettier-plugin-tailwindcss"]
 }
