--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,10 +6,10 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "lint:fix": "eslint . --fix",
-    "format": "prettier --write 'src/**/*.{js,jsx}'"
+    "lint": "eslint .",
+    "lint:fix": "eslint --fix",
+    "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc"
   },
   "dependencies": {
     "react": "^18.3.1",
@@ -29,9 +29,10 @@
     "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
+    "eslint-plugin-readable-tailwind": "^1.5.2",
     "globals": "^15.8.0",
     "postcss": "^8.4.39",
-    "prettier": "^3.3.3",
+    "prettier": "3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.5",
     "tailwindcss": "^3.4.6",
     "vite": "^5.3.4"
