--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,9 +12,12 @@
     "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc"
   },
   "dependencies": {
-    "@headlessui/react": "^1.7.6",
+    "@cyntler/react-doc-viewer": "^1.16.6",
+    "@headlessui/react": "^2.1.2",
     "@heroicons/react": "^2.0.16",
+    "@vitejs/plugin-react-refresh": "^1.3.6",
     "react": "^18.2.0",
+    "react-doc-viewer": "^0.1.13",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
@@ -33,7 +36,7 @@
     "eslint-plugin-readable-tailwind": "^1.0.0",
     "globals": "^13.13.0",
     "postcss": "^8.4.16",
-    "prettier": "2.8.7",
+    "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.2.1",
     "react-router-dom": "^6.25.1",
     "tailwindcss": "^3.2.7",
